chaging jobs file to txt. and notify for no new jobs